package com.library;

import java.util.Date;

public class Author {
    private String id;
    private String name;
    private Date birthDate;
    private String country;
}
