package com.library;

public class BorrowingConstraints {
    private int physicalBooksLimit;
    private int digitalBooksLimit;
}
