package com.library;

public class ContactInformation {
    private String phoneNumber;
    private String streetName;
    private String streetNumber;
    private int zipCode;
    private String city;
    private String country;
}
