package com.library;

public enum ReservationStatus {
    Waiting,
    Notified,
    Claimed,
    Expired,
    Cancelled
}
