package com.library;

public enum Role {
    Student,
    Teacher,
    External
}
